# fast-api-learning

./: README.md
tutorial/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  tox.ini
tutorial/tutorial/: dependencies.py  main.py
tutorial/tutorial/my_super_project/: README.md  sql_app.db  sql_app_test.db-journal
tutorial/tutorial/my_super_project/sql_app/: database.py
tutorial/tutorial/my_super_project/tests/: conftest.py  test_main.py
tutorial/tutorial/my_super_project/tests_with_factory/: README.md  conftest.py  factories.py  test_main.py
